--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "passport": "^0.5.2",
     "passport-auth0": "^1.4.2",
     "passport-jwt": "^4.0.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0-alpha.3"
