--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "csurf": "^1.11.0",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "express-jwt": "^7.7.1",
+    "express-oauth2-jwt-bearer": "^1.1.0",
     "express-rate-limit": "^6.3.0",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
@@ -14,6 +16,7 @@
     "hpp": "^0.2.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.1.2",
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
     "passport-auth0": "^1.4.2",
