--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "create-db": "node setupDB.js",
     "populate-db": "node fakeData/insertProductsCSV.js",
     "run-server": "node server.js",
-    "start": "npm run create-db && npm run run-server"
+    "start": "npm run create-db && npm run run-server",
+    "vercel-build": "echo teste"
   }
 }
