--- a/dev.env
+++ b/dev.env
@@ -11,5 +11,6 @@ AUTH0CALLBACKURL="http://localhost:3000/auth/callback"
 
 FRONTEND_URL="http://localhost:3000/"
 
-DATABASE_URL="postgres://correia:DevPassword22@localhost:5432/e-commerce"
+DATABASE2_URL="postgres://correia:DevPassword22@localhost:5432/e-commerce"
+DATABASE_URL="postgres://default:RaZ3Mwk9fSDy@ep-yellow-bird-27604307-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb"
 
